# embeddenator-webpuppet

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_STATUS.md  README.md  ROADMAP.md  SECURITY_AUDIT.md  deny.toml
.ci/: security-pipeline.sh  security-testing.toml
.github/workflows/: ci.yml
examples/: research_runner.rs
src/: browser.rs  config.rs  containerized.rs  credentials.rs  error.rs  homelab_ci.rs  intervention.rs  lib.rs  permissions.rs  puppet.rs  ratelimit.rs  sanitization.rs  secure_puppet.rs  security.rs  security_tests.rs  session.rs
src/providers/: chatgpt.rs  claude.rs  gemini.rs  grok.rs  kaggle.rs  mod.rs  notebooklm.rs  perplexity.rs  traits.rs
tests/: integration.rs
