[package]
name = "embeddenator-webpuppet"
version = "0.1.0-alpha.2"
edition = "2021"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
description = "Self-hosted browser automation for AI provider web UIs (Grok, Claude, Gemini, ChatGPT, Perplexity, NotebookLM)"
license = "MIT"
repository = "https://github.com/tzervas/embeddenator-webpuppet"
keywords = ["browser-automation", "ai", "puppeteer", "web-scraping"]
categories = ["web-programming", "development-tools"]

[features]
default = ["chromium", "all-providers"]
chromium = ["dep:chromiumoxide"]
firefox = ["dep:fantoccini"]
# Enable specific providers
grok = []
claude = []
gemini = []
chatgpt = []
perplexity = []
notebooklm = []
kaggle = []
# Provider groups
all-providers = ["grok", "claude", "gemini", "chatgpt", "perplexity", "notebooklm", "kaggle"]
core-providers = ["grok", "claude", "gemini", "chatgpt"]
search-providers = ["grok", "perplexity", "chatgpt"]
# TLS backend selection
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
# Browser automation - chromiumoxide is pure Rust, async-first
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"], optional = true }
fantoccini = { version = "0.21", optional = true }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# HTTP and networking - use rustls to avoid OpenSSL dep
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
humantime-serde = "1.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Security - credential handling  
keyring = { version = "3.0", optional = true }
secrecy = { version = "0.8", optional = true }

# Rate limiting
parking_lot = "0.12"

# HTML parsing for response extraction
scraper = "0.20"

# Regex for security screening
regex = "1.10"

# Async utilities
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.6", features = ["v4"] }
dirs = "5.0"
fastrand = "2.0"
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
anyhow = "1.0"
tracing-subscriber = "0.3"

[[example]]
name = "research_runner"
required-features = ["all-providers"]
