[package]
name = "embeddenator-webpuppet"
version = "0.1.0-alpha.3"
edition = "2021"
rust-version = "1.75.0"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
description = "Browser automation library for AI provider web interfaces"
license = "MIT"
repository = "https://github.com/tzervas/embeddenator-webpuppet"
documentation = "https://docs.rs/embeddenator-webpuppet"
readme = "README.md"
keywords = ["browser-automation", "ai", "puppeteer", "web-scraping"]
categories = ["web-programming", "development-tools"]

[features]
default = ["chromium", "all-providers"]
chromium = ["dep:chromiumoxide"]
firefox = ["dep:fantoccini"]
# Enable specific providers
grok = []
claude = []
gemini = []
chatgpt = []
perplexity = []
notebooklm = []
kaggle = []
# Provider groups
all-providers = ["grok", "claude", "gemini", "chatgpt", "perplexity", "notebooklm", "kaggle"]
core-providers = ["grok", "claude", "gemini", "chatgpt"]
search-providers = ["grok", "perplexity", "chatgpt"]
secrecy = []
# TLS backend selection
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
# Browser automation - chromiumoxide is pure Rust, async-first
chromiumoxide = { version = "=0.7.0", default-features = false, features = ["tokio-runtime"], optional = true }
fantoccini = { version = "=0.21.0", optional = true }

# Async runtime
tokio = { version = "=1.49.0", features = ["full"] }
futures = "=0.3.31"

# HTTP and networking - use rustls to avoid OpenSSL dep
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "cookies", "rustls-tls"] }

# Serialization
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.148"
toml = "=0.8.23"
humantime-serde = "=1.1.1"

# Error handling
thiserror = "=1.0.69"
anyhow = "=1.0.100"

# Logging
tracing = "=0.1.44"

# Security - credential handling  
keyring = { version = "=3.6.3", optional = true }
secrecy = { version = "=0.8.0" }

# Rate limiting
parking_lot = "=0.12.5"

# HTML parsing for response extraction
scraper = "=0.25.0"

# Regex for security screening
regex = "=1.12.2"

# Async utilities
async-trait = "=0.1.89"

# Time handling
chrono = { version = "=0.4.42", features = ["serde"] }

# Utilities
uuid = { version = "=1.19.0", features = ["v4"] }
dirs = "=5.0.1"
fastrand = "=2.3.0"
urlencoding = "=2.1.3"
url = "=2.5.8"
aes-gcm = "=0.10.3"
pbkdf2 = "=0.12.2"
chacha20poly1305 = "=0.10.1"
sha2 = "=0.10.9"
rand = "=0.9.2"
base64 = "=0.22.1"

[dev-dependencies]
tokio-test = "=0.4.4"
tempfile = "=3.24.0"
anyhow = "=1.0.100"
tracing-subscriber = "=0.3.22"

[[example]]
name = "research_runner"
required-features = ["all-providers"]
